cargo-features = ["edition2024"]

[package]
name = "ciunni"
version = "0.1.0"
authors = ["Daniele D'Agnelli <daniele@bidimensional.net>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.80"
publish = false


[dependencies]
pdf = "0.9.0"
# eframe = { version = "0.28.1", features = [
#     "default",
#     "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
# ] }

# # For image support:
# egui_extras = {version = "0.28.1",  features = ["default", "image"] }

# env_logger = { version = "0.11.5", default-features = false, features = [
#     "auto-color",
#     "humantime",
# ] }

# log = "0.4.14"
# console_log = "1.0.0"
# cargo-tarpaulin = "0.31.1"
# egui = "0.28.1"

# [workspace]
# members = [
#     "app",
#     "ui",
#     "api"
# , "server"]


