cargo-features = ["edition2024"]

[package]
name = "ciunni"
version = "0.1.0"
authors = ["Daniele D'Agnelli <daniele@bidimensional.net>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.80"
publish = false


[dependencies]
egui = { version = "0.28.1" }
egui_extras = { version = "0.28.1" }
eframe = { version = "0.28.1" }
env_logger = { version = "0.11.5" }
