cargo-features = ["edition2024"]

[package]
name = "ciunni"
version = "0.1.0"
authors = ["Daniele D'Agnelli <daniele@bidimensional.net>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.80"
publish = false


[dependencies]
egui = { version = "0.28.1" }
egui_extras = { version = "0.28.1" }
eframe = { version = "0.28.1" }
env_logger = { version = "0.11.5" }
rfd ={ version = "0.14.1" }


[lib]
name = "ciunni"
path = "src/lib.rs"

[[bin]]
name = "ciunni"
path = "src/main.rs"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2